--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.202",
-    "@types/md5": "^2.3.5",
+    "@types/spark-md5": "^3.0.4",
     "lodash": "^4.17.21",
-    "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "spark-md5": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
